# sci-project

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  API_INTEGRATION_GUIDE.md  API_INTEGRATION_PROGRESS.md  BACKEND_DEVELOPMENT_PLAN.md  BACKEND_DEVELOPMENT_ROADMAP.md  BACKEND_DEVELOPMENT_ROADMAP_old.md  COMPETITION_DETAILS_IMPLEMENTATION.md  DOCKER_README.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  README.md  README_API_INTEGRATION.md  SCI_PROJECT_CONTEXT.md  SECURITY_CHANGES.md  backend-development-guide.md  context.md  docker-compose.override.yml  docker-compose.prod.local.yml  docker-compose.prod.yml  docker-compose.yml  env.example  env.production.example  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/: SECRETS_SETUP.md
Phase2_steps/: PHASE2_STEP1_QUALITY_CHECK.md  PHASE2_STEP1_SUMMARY.md  STEP2_IMPLEMENTATION_PLAN.md  STEP2_IMPLEMENTATION_SUMMARY.md  STEP3_IMPLEMENTATION_PLAN.md  STEP3_IMPLEMENTATION_SUMMARY.md  STEP4_ENHANCEMENT_PLAN.md  STEP4_IMPLEMENTATION_SUMMARY.md  STEP5_ENHANCEMENT_PLAN.md  STEP5_IMPLEMENTATION_SUMMARY.md
app/: layout.tsx  page.tsx
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml  pytest.ini  run_tests.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250808_00_initial_models.py  20250808_01_add_competition_moderation_fields.py  3cb59d4dc88a_initial_migration_create_users_and_.py  5d423507ceb7_add_overview_field_to_competitions.py  d71093cb5ad5_add_featured_priority_field_to_.py
backend/app/: __init__.py  crud.py  main.py
backend/app/alembic/: README  env.py  script.py.mako
backend/app/alembic/versions/: 1e0ff91a2bac_initial_sci_models.py
backend/app/api/: __init__.py  deps.py  main.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  competitions.py  health.py  recommendations.py  upload.py  users.py  utils.py
backend/app/core/: __init__.py  config.py  database.py  db.py  deps.py  exceptions.py  security.py  upload.py  utils.py
backend/app/crud/: competition.py  user.py
backend/app/models/: __init__.py  common.py  competition.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  competition.py  recommendation.py  upload.py  user.py
backend/app/services/: ai_service.py  auth_service.py  competition_service.py  user_service.py
backend/app/utils/: __init__.py  common.py
backend/scripts/: create_test_users.py  migrate.sh  populate_competitions.sql  populate_data.py  run_sql_populate.sh  test_auth.py
backend/tests/: TESTING.md  __init__.py  conftest.py  test_auth_routes.py  test_competitions.py  test_crud_competition.py  test_crud_user.py  test_dependencies.py  test_integration.py  test_schemas.py  test_security.py  test_upload_routes.py  test_upload_utils.py  test_user_routes.py
components/: breadcrumb.tsx  competition-card.tsx  competition-details.tsx  competitions-carousel.tsx  countdown-clock.tsx  create-competition-form.tsx  edit-competition-form.tsx  error-message.tsx  featured-carousel.tsx  footer.tsx  hero.tsx  like-button.tsx  loading-spinner.tsx  mode-toggle.tsx  navbar.tsx  password-input.tsx  stem-info.tsx  user-profile-form.tsx
data/: dummy_data.json
docs/: API_INTEGRATION.md  BACKEND_DEVELOPMENT_PLAN.md  PHASE2_AUTHENTICATION_PLAN.md  PHASE3_COMPETITION_MANAGEMENT_PLAN.md  PHASE_4_FILE_UPLOAD.md
frontend/: .eslintrc.cjs  .gitignore  .gitkeep  ADMIN_INTERFACE_DOCUMENTATION.md  API_INTEGRATION_PROGRESS.md  COMPETITION_DETAILS_IMPLEMENTATION.md  Dockerfile  (+17 more)
(+135 files in other folders)
