[project]
name = "sci-backend"
version = "0.1.0"
description = "Science Competitions Insight - FastAPI Backend"
requires-python = ">=3.10,<4.0"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.24",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic", "venv", ".venv"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto" 
