[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "mypy>=1.17.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "ruff>=0.12.3",
    "sentry-sdk[fastapi]>=2.33.0",
    "sqlmodel>=0.0.24",
]
